before trying for loop

--- a/test three.html
+++ b/test three.html
@@ -150,8 +150,8 @@
             <td > N </td>
          </tr>
          <tr>
-            <td >acceleration</td>
-            <td id="acceleration"> 0 </td>
+            <td >Floating Force</td>
+            <td id="floating_force"> 0 </td>
             <td > m.s<sup>-2</sup> </td>
          </tr>
          </table>
@@ -206,7 +206,7 @@
             <tbody>
             <tr>
                <td >Density</td>
-               <td id="high" > 0 </td>
+               <td id="density" > 0 </td>
                <td > kg/m<sup>3</sup> </td>
             </tr>
             <tr>
@@ -239,7 +239,7 @@
       <script src="danger sound.js">
       </script>
 
-      <script src="script.js?v=36">
+      <script src="script.js?v=92">
       </script>
 
    </body>
